# blog

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.cargo/: audit.toml
.github/actions/setup-system-deps/: action.yml
.github/workflows/: code-validation.yml  dependabot-auto-merge.yml  packages-validation.yml  release.yml  upload-binaries.yml
.sqlx/: query-2f9b20cc0be0fe2f36a3d01d5fc80855d57dd53a9d28ecf250f8df40cb63cffc.json  query-784c9b6dca562ca1e1133829ee59bf6e4e6fcfb33d9fd3c13eda7fc0c46ad5b0.json  query-794cfd3353123f2583329047760c5e606a0195fe4c3114a4d7594a0760dff549.json  query-9617301a1c0c9c7ef42be5b5c9fbb1b13068b72b731cff18160a24aa06a687d1.json  query-9a781e9d434c81eb53a08e4e97d85eeb077d4e51b1095e0884fb26fcb88c3805.json  query-a394019780f5e6b55abe04cc6518f20b276b95f825cc292db91e4717a3558fb3.json  query-b1ffbdfaf081445155f927cbee97397d0baa8f870c7c630455bf75449ae362fd.json  query-de2c8eecf538d5af52e3d8f3daa49c984715431f042e95ecb7ff5829452249f9.json  query-e6d2f409a5dcd62aff8f232685da3d848854f52cc68fb89d8151f70b54c3e012.json
configs/docker/: builder.dockerfile  hints  server.dockerfile  web-client.dockerfile
configs/git/hooks/: pre-push
configs/scripts/: cargo-fmt.sh  cargo-msrv.sh
modules/blog-cli/: Cargo.toml  README.md  commands
modules/blog-cli/examples/: cli_grpc_example.rs  cli_http_example.rs
modules/blog-cli/src/: configs.rs  init_client.rs  lib.rs  main.rs  token.rs
modules/blog-client/: Cargo.toml  README.md
modules/blog-client/examples/: grpc_client_example.rs  http_client.rs
modules/blog-client/src/: client.rs  grpc_client.rs  http_client.rs  lib.rs
modules/blog-fe/: Cargo.toml  Dioxus.toml  README.md  build.rs
modules/blog-fe/assets/: main.css
modules/blog-fe/src/: generated.rs  main.rs
modules/blog-fe/src/components/: layout.rs  post_card.rs  posts_list.rs
modules/blog-fe/src/configs/: app.rs  assets.rs  error.rs  mod.rs  route.rs
modules/blog-fe/src/infrastructure/: client.rs  mod.rs  model.rs  state.rs
modules/blog-fe/src/view/: create_post.rs  edit_post.rs  home.rs  login.rs  mod.rs  register.rs
modules/blog-server/: Cargo.toml  README.md
modules/blog-server/.sqlx/: query-2dba71dadd3954439c253e5dc9d32a25638ec6a8126521a0412d5df6a94aedd9.json  query-63a0222e92b3410eab8041b0087c7592a85f1d903fdc6e0f024469ff0ff64e3f.json  query-7d028bb67315376ca4eef2281b63eca8546b33f36a8e581d1a6a08dee29ff136.json  query-b1ffbdfaf081445155f927cbee97397d0baa8f870c7c630455bf75449ae362fd.json  query-d4a25de5dcc42dea615ff631baac4e3c10641be7292901fa672d4f1f5167ae3b.json  query-e6d2f409a5dcd62aff8f232685da3d848854f52cc68fb89d8151f70b54c3e012.json
modules/blog-server/migrations/: 20260101000001_create_users.sql  20260101000002_create_posts.sql
modules/blog-server/src/: main.rs
modules/blog-server/src/application/: auth_service.rs  blog_service.rs
modules/blog-server/src/data/: post_repository.rs  user_repository.rs
modules/blog-server/src/domain/: post.rs  user.rs
modules/blog-server/src/infrastructure/: auth.rs  config.rs  database.rs  error.rs  logging.rs
modules/blog-server/src/presentation/grpc/: constants.rs  init.rs  mod.rs  server.rs  service.rs
modules/blog-server/src/presentation/http/: dto.rs  posts.rs
modules/cli/: Cargo.toml
modules/cli/examples/: cli_grpc_example.rs  cli_http_example.rs
modules/cli/src/: configs.rs  error.rs  init_client.rs  logging.rs  main.rs  token.rs
modules/client/: Cargo.toml
modules/client/examples/: grpc_client_example.rs  http_client_example.rs
modules/client/src/: client.rs  error.rs  grpc_client.rs  http_client.rs  lib.rs
modules/common/: Cargo.toml  README.md
modules/common/src/: constants.rs  utils.rs
modules/proto-generator/: Cargo.toml  README.md  build.rs
modules/proto-generator/proto/: blog.proto
modules/proto-generator/src/: lib.rs
modules/server/: .env.template  Cargo.toml
modules/server/.sqlx/: query-9a781e9d434c81eb53a08e4e97d85eeb077d4e51b1095e0884fb26fcb88c3805.json  query-a394019780f5e6b55abe04cc6518f20b276b95f825cc292db91e4717a3558fb3.json
modules/server/migrations/: 20260101000001_create_users.sql  20260101000002_create_posts.sql
modules/server/src/: main.rs
modules/server/src/application/: auth_service.rs  blog_service.rs  error.rs  mod.rs
modules/server/src/data/: constants.rs  mod.rs  post_repository.rs  user_repository.rs
modules/server/src/domain/: error.rs  post.rs  user.rs
modules/server/src/infrastructure/: auth.rs  config.rs  cors.rs  database.rs  jwt.rs  mod.rs
modules/server/src/presentation/: auth.rs  middleware.rs  mod.rs
modules/server/src/presentation/grpc/: auth.rs  init.rs  mod.rs  server.rs
modules/server/src/presentation/http/: auth.rs  constants.rs  dto.rs  init.rs  mod.rs  posts.rs  scoped.rs
modules/server/src/presentation/middleware/: jwt.rs
modules/wasm-fe/: Cargo.toml  Dioxus.toml  build.rs
modules/wasm-fe/assets/: main.css
modules/wasm-fe/src/: generated.rs  main.rs
modules/wasm-fe/src/components/: layout.rs  mod.rs  nav.rs  post_card.rs  post_edit.rs  posts_list.rs
modules/wasm-fe/src/configs/: route.rs
modules/wasm-fe/src/infrastructure/: client.rs  model.rs  state.rs
modules/wasm-fe/src/store/: model.rs  state.rs
modules/wasm-fe/src/view/: create_post.rs  edit_post.rs  home.rs  login.rs  mod.rs  post.rs  register.rs
