[workspace]
resolver = "3"
members = [
    "modules/cli",
    "modules/client",
    "modules/common",
    "modules/proto-generator",
    "modules/server",
    "modules/wasm-fe"
]

[workspace.package]
version = "0.1.0"
description = "Blog"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arthurhovhannisyan31/blog"
rust-version = "1.93.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
proto-generator = { path = "./modules/proto-generator" }
signal-hook = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.14"
tokio = "1.49"
thiserror = "2.0"

[workspace.lints]

[profile.release]
lto = "thin"