[workspace]
resolver = "3"
members = [
    "modules/blog-cli",
    "modules/blog-client",
    "modules/blog-fe",
    "modules/blog-server",
    "modules/common",
    "modules/proto-generator",
]

[workspace.package]
version = "0.1.0"
description = "Blog"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Arthur Hovhannisyan <arthurhovhannisyan31@gmail.com>"]
repository = "https://github.com/arthurhovhannisyan31/blog"
rust-version = "1.93.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
common = { path = "./modules/common" }
proto-generator = { path = "./modules/proto-generator" }
reqwest = { version = "0.13", features = ["json", "query"] }
signal-hook = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tonic = "0.14"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono", "time"] }

[workspace.lints]

[profile.release]
lto = "thin"