[package]
name = "blog-cli"
description = "Blog cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "blog-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
blog-client = { path = "../blog-client" }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
proto-generator.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true