[package]
name = "blog-server"
description = "Blog http and grpc API server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "blgo-server"
path = "src/main.rs"

[dependencies]
actix-cors = "0.7"
actix-web = "4"
actix-service = "2"
actix-web-httpauth = "0.8.2"
anyhow.workspace = true
argon2 = "0.5"
async-trait = "0.1"
chrono.workspace = true
common.workspace = true
dotenvy = "0.15"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
futures-util = "0.3"
prost = "0.14"
proto-generator.workspace = true
rand_core = { version = "0.6", features = ["getrandom"] }
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
tokio.workspace = true
tonic.workspace = true
tonic-middleware = "0.4"
tonic-prost = "0.14"
tonic-reflection = "0.14"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[build-dependencies]
tonic-prost-build = "0.14"