[package]
name = "client"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
proto-generator.workspace = true
reqwest = { version = "0.13", features = ["json"] }
tonic.workspace = true
tokio.workspace = true
tonic-prost = "0.14"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[build-dependencies]
tonic-prost-build = "0.14"