[package]
name = "proto-generator"
description = "Blog proto schema generator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "proto_generator"
path = "src/lib.rs"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"

[lints]
workspace = true

[build-dependencies]
tonic-prost-build = "0.14"