[package]
name = "server"
description = "Blog server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
actix-cors = "0.6"
actix-web = "4"
anyhow.workspace = true
argon2 = "0.5"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = "10"
proto-generator = { path = "../proto-generator" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[lints]
workspace = true