[package]
name = "wasm-fe"
version = "0.1.0"
authors = ["Arthur Hovhannisyan <arthurhovhannisyan31@gmail.com>"]
edition = "2021"

[dependencies]
anyhow.workspace = true
dioxus = { version = "0.7.1", features = ["router"] }
#proto-generator.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
