[package]
name = "wasm-fe"
description = ""
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
common.workspace = true
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-sdk-storage = "0.7.0"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true


[build-dependencies]
dotenvy = "0.15"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
